--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,38 @@
         "sstream": "cpp",
         "text_encoding": "cpp",
         "ieee32_with_uint128.h": "c",
-        "ieee32_with_uint128.c": "cpp"
+        "ieee32_with_uint128.c": "cpp",
+        "intrin.h": "c",
+        "stdio.h": "c",
+        "cfloat": "c",
+        "stdlib.h": "c",
+        "complex": "cpp",
+        "bitset": "cpp",
+        "codecvt": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "expected": "cpp",
+        "source_location": "cpp",
+        "fstream": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "ranges": "cpp",
+        "any": "c",
+        "config.h": "c",
+        "common.h": "c",
+        "ieee64_no_uint128.h": "c",
+        "stdint.h": "c",
+        "math.h": "c",
+        "teju.h": "c",
+        "literal.h": "c",
+        "stdbool.h": "c",
+        "d2s.c": "cpp",
+        "typeindex": "cpp",
+        "cassert": "cpp",
+        "version": "cpp",
+        "yy_double.c": "cpp",
+        "stddef.h": "c",
+        "yyjson.c": "cpp"
     }
 }
